Workflow python versions: build 3.14 wheel, test 3.15 pre-release
Also bump up to 3.11 for most test infrastructure

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -30,13 +30,14 @@ jobs:
     env:
       MIN_MAX_PYTHON_VERSIONS: |
         3.10
-        3.13
+        3.14
       ALL_PYTHON_VERSIONS: |
         3.10
         3.11
         3.12
         3.13
-      TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311|py312).*?' }}
+        3.14
+      TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311|py312|py313).*?' }}
     steps:
       - uses: actions/checkout@v4
         with:
