--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 min_version = 4.0
 # The python environments to run the tests in
-envlist = py{311,312,313,314},py{311,312,313,314}-mac,py310-{base,brille,matplotlib,phonopy-reader,all,minrequirements-linux,minrequirements-mac,no-c}
+envlist = py{311,312,313,314,315},py{311,312,313,314}-mac,py310-{base,brille,matplotlib,phonopy-reader,all,minrequirements-linux,minrequirements-mac,no-c}
 allowlist_externals = git
 
 [testenv]
@@ -37,6 +37,10 @@ extras = {[testenv:py311]extras}
 commands =
     {[testenv]test_command} {posargs} -m "brille"
     {[testenv]test_command} {posargs} -m "not brille"
+
+# Py3.15 is pre-release, test without extras
+[testenv:py315]
+commands = {[testenv]test_command} -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with no extras
 [testenv:py310-base]
