--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, macos-15-intel, macos-latest, ubuntu-latest]
-        python-version: ['3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
         include:
           - os: windows-latest
             wheelname: win
@@ -39,6 +39,10 @@ jobs:
             version-tag: cp311
           - python-version: '3.12'
             version-tag: cp312
+          - python-version: '3.13'
+            version-tag: cp313
+          - python-version: '3.14'
+            version-tag: cp314
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
