Separate brille and non-brille tests

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,9 @@ extras =
     matplotlib
     phonopy-reader
     brille
-commands = {[testenv]test_command} {posargs}
+commands =
+    {[testenv]test_command} {posargs} -m "brille"
+    {[testenv]test_command} {posargs} -m "not brille"
 
 # Test brille and non-brille separately
 [testenv:py{311,312,313,314}-mac]
