--- a/tox.ini
+++ b/tox.ini
@@ -28,8 +28,7 @@ extras =
     phonopy-reader
     brille
 commands =
-    {[testenv]test_command} {posargs} -m "brille"
-    {[testenv]test_command} {posargs} -m "not brille"
+    {[testenv]test_command} {posargs}
 
 # Test brille and non-brille separately
 [testenv:py{311,312,313,314}-mac]
