Update run_tests.py, docs and workflows for --parallel parameter
We shouldn't hard-code parallelism into all test runs; allow developer
to test in serial with ``run_tests.py`` or ``tox`` and add
``--parallel`` for speed.

Most CI should use ``--parallel``, though!

Also simplify run_tests.py a bit by passing Namespace with named
attributes rather than doing so much tuple-unpacking and variable
assignment.

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -86,7 +86,7 @@ jobs:
 
       - name: Run tests
         shell: bash -l {0}
-        run: python -m tox run -- ${{ inputs.coverage && '--cov' || '' }}
+        run: python -m tox run -- ${{ inputs.coverage && '--cov' || '' }} --parallel
 
       - name: Upload test results
         if: always()
