Fix intermittent Linux test failures: rework parallelism over unit tests (#443)
* Use pytest-xdist instead of tox run-parallel

* Use pytest-cov for testing

This seems to be mostly compatible with classic Coverage API, while
supporting pytest-xdist

* Tweak coveragerc

* Update run_tests.py, docs and workflows for --parallel parameter

Instead of working with cov object directly, pass relevant arguments
to pytest.

We shouldn't hard-code parallelism into all test runs; allow developer
to test in serial with ``run_tests.py`` or ``tox`` and add
``--parallel`` for speed.

Most CI should use ``--parallel``, though!

Also simplify run_tests.py a bit by passing Namespace with named
attributes rather than doing so much tuple-unpacking and variable
assignment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ matplotlib = ["matplotlib>=3.8.0"]
 phonopy_reader = ["h5py>=3.6.0", "PyYAML>=6.0"]  # Deprecated, will be removed in future versions.
 phonopy-reader = ["h5py>=3.6.0", "PyYAML>=6.0"]
 brille = ["brille>=0.7.0"]
-test = ["mock", "pytest>=8.0,<9.0", "coverage", "pytest-mock", "pytest-lazy-fixtures", "pytest-xvfb", "python-slugify"]
+test = ["mock", "pytest>=8.0,<9.0", "pytest-cov", "pytest-mock", "pytest-lazy-fixtures", "pytest-xdist", "pytest-xvfb", "python-slugify"]
 ci = ["tox==4.30.3"]
 
 [project.scripts]
