--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,8 @@ extras =
     matplotlib
     phonopy-reader
     brille
-commands = {[testenv]test_command} {posargs}
+commands =
+    {[testenv]test_command} {posargs}
 
 # Test brille and non-brille separately
 [testenv:py{311,312,313,314}-mac]
