Pin numpy upper bound to 2.3.5
We have a few errors to take care of. Some clearly related to
deprecation warning, others not so much. In the mean time, pin to
working version.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
 ]
 dependencies = [
     "packaging",
-    "numpy>=1.24.0",
+    "numpy>=1.24.0,<=2.3.5",
     "scipy>=1.10",
     "seekpath>=1.1.0",
     "spglib>=2.1.0",
