--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "numpy>=1.24.0,<=2.3.5",
     "scipy>=1.10",
     "seekpath>=1.1.0",
-    "spglib>=2.1.0",
+    "spglib>=2.1.0,<2.7.0",
     "pint>=0.22",
     "threadpoolctl>=3.0.0",
     "toolz>=0.12.1",
