--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,7 +121,7 @@ select = [
        "TD",      # flake8-todos
        "TC",      # flake8-type-checking
        "ARG",     # flake8-unused-arguments
-       "PTH",     # flake8-use-pathlib : would love to but maybe easier with API breaks
+       "PTH",     # flake8-use-pathlib
        "FLY",     # flynt
        "I",       # isort
        # "C90",     # mccabe : code complexity check. Worth a look but non-trivial
