Each artifact needs a different name

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -134,5 +134,5 @@ jobs:
         if: inputs.coverage
         uses: actions/upload-artifact@v4
         with:
-          name: Coverage XML (${{ inputs.os }})
+          name: Coverage HTML (${{ inputs.os }})
           path: tests_and_analysis/test/reports/*.html
