--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -95,20 +95,6 @@ jobs:
           name: Unit test results ${{ inputs.os }}
           path: tests_and_analysis/test/reports/junit_report*.xml
 
-      - name: Publish Codacy coverage
-        uses: codacy/codacy-coverage-reporter-action@v1
-        if: inputs.coverage
-        with:
-          project-token: ${{ secrets.codacy_project_token }}
-          coverage-reports: tests_and_analysis/test/reports/coverage*.xml
-
-      - uses: codecov/codecov-action@v4
-        if: inputs.coverage
-        with:
-          files: tests_and_analysis/test/reports/coverage*.xml
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
-
       - name: Merge coverage reports
         if: inputs.coverage
         shell: bash -l {0}
@@ -128,11 +114,11 @@ jobs:
         shell: bash -l {0}
         run: |
           dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.5.1
-          reportgenerator -reports:tests_and_analysis/test/reports/coverage-combined.xml -targetdir:tests_and_analysis/test/reports/ -reporttypes:Html_Dark
+          reportgenerator -reports:tests_and_analysis/test/reports/coverage-combined.xml -targetdir:tests_and_analysis/test/reports/html -reporttypes:Html_Dark
 
       - name: Upload coverage HTML
         if: inputs.coverage
         uses: actions/upload-artifact@v4
         with:
           name: Coverage HTML (${{ inputs.os }})
-          path: tests_and_analysis/test/reports/*.html
+          path: tests_and_analysis/test/reports/html
